--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.17 2002/05/29 01:59:42 fgsch Exp $
+.\"     $OpenBSD: intro.4,v 1.18 2002/06/20 03:32:40 fgsch Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
@@ -91,6 +91,8 @@ Ensoniq AudioPCI based audio.
 10BaseT/100BaseTX SBus Ethernet controller.
 .It Xr beeper 4
 simple speaker beeper
+.It Xr bwtwo 4
+SBus monochrome graphics frame buffer.
 .It Xr cgsix 4
 8 bit SBus color graphics frame buffer.
 .It Xr cgthree 4
