--- a/share/man/man4/man4.sparc/Attic/kbd.4
+++ b/share/man/man4/man4.sparc/Attic/kbd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: kbd.4,v 1.6 2001/06/23 07:04:20 pjanzen Exp $
+.\"	$OpenBSD: kbd.4,v 1.7 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: kbd.4,v 1.3 1997/11/25 22:15:56 pk Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
