--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.72 2002/07/06 09:30:14 pvalchev Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.73 2002/08/07 15:49:57 avsm Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -909,7 +909,7 @@ Its main use is for disabling part of a multi-packages build, for instance:
 .Bd -literal
 FLAVOR=no_gnome make package 
 .Ed
-
+.Pp
 Creation of a separate working directory is mandatory.
 If, at a later time, a full build with all subpackages is required,
 all the work will need to be done again.
