--- a/share/man/man4/man4.sparc/cgfourteen.4
+++ b/share/man/man4/man4.sparc/cgfourteen.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfourteen.4,v 1.12 2002/08/12 10:48:21 miod Exp $
+.\"	$OpenBSD: cgfourteen.4,v 1.13 2002/08/21 22:18:27 miod Exp $
 .\"	$NetBSD: cgfourteen.4,v 1.3 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright (c) 1996 The President and Fellows of Harvard College.
@@ -72,5 +72,6 @@ interface.
 .Xr cgtwo 4 ,
 .Xr pnozz 4 ,
 .Xr tcx 4 ,
+.Xr vigra 4 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4
