--- a/share/man/man5/moduli.5
+++ b/share/man/man5/moduli.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: moduli.5,v 1.3 2001/06/24 18:50:52 provos Exp $
+.\" $OpenBSD: moduli.5,v 1.4 2002/08/29 07:34:31 wcobb Exp $
 .\"
 .\" Copyright 1997, 2000 William Allen Simpson <wsimpson@greendragon.com>
 .\" All rights reserved.
@@ -39,11 +39,8 @@
 .Sh DESCRIPTION
 The
 .Pa /etc/moduli
-file contains the system-wide Diffie-Hellman prime moduli for the
-.Xr photurisd 8
-and
-.Xr sshd 8
-programs.
+file contains the system-wide Diffie-Hellman prime moduli for
+.Xr sshd .
 .Pp
 Each line in this file contains the following fields:
 Time, Type, Tests, Tries, Size, Generator, Modulus.
