--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.18 2002/06/20 03:32:40 fgsch Exp $
+.\"     $OpenBSD: intro.4,v 1.19 2002/08/05 03:58:50 jason Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
@@ -115,6 +115,8 @@ SBus HME Ethernet controllers (SunSwift).
 Qlogic ISP SBus SCSI controller.
 .It Xr le/lebuffer 4
 AMD 7990 LANCE ethernet controller.
+.It Xr lofn 4
+Hifn 6500 public key cryptography engine.
 .It Xr magma 4
 MAGMA serial/parallel communication boards.
 .It Xr openprom 4
