--- a/share/man/man5/moduli.5
+++ b/share/man/man5/moduli.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: moduli.5,v 1.4 2002/08/29 07:34:31 wcobb Exp $
+.\" $OpenBSD: moduli.5,v 1.5 2002/09/06 21:36:52 deraadt Exp $
 .\"
 .\" Copyright 1997, 2000 William Allen Simpson <wsimpson@greendragon.com>
 .\" All rights reserved.
@@ -149,5 +149,4 @@ without completely disqualifying older moduli.
 .It Pa /etc/moduli
 .El
 .Sh SEE ALSO
-.Xr photurisd 8 ,
 .Xr sshd 8
