--- a/share/man/man4/man4.sparc/cgfourteen.4
+++ b/share/man/man4/man4.sparc/cgfourteen.4
@@ -48,8 +48,8 @@
 .Nm cgfourteen
 .Nd accelerated 8/24-bit color frame buffer
 .Sh SYNOPSIS
-.Cd "cgfourteen0 at obio0 addr 0x9c000000" Pq "SS10SX and SS20"
-.Cd "cgfourteen1 at obio0 addr 0x90000000" Pq "SS10SX and SS20
+.Cd "cgfourteen0 at obio0 addr 0x9c000000 flags 0x0000" Pq "SS10SX and SS20"
+.Cd "cgfourteen1 at obio0 addr 0x90000000 flags 0x0000" Pq "SS10SX and SS20"
 .Cd "wsdisplay* at cgfourteen?"
 .Sh DESCRIPTION
 The
@@ -62,6 +62,18 @@ It does not provide direct device driver entry points
 but makes its functions available via the internal
 .Xr wsdisplay 4
 interface.
+.Pp
+By default, the frame buffer will be initialized in 32 bit mode, if the
+display resolution allows it.
+By setting
+.Ar flags
+to
+.Ar 0x0001
+(via
+.Xr config 8
+or
+.Xr boot_config 8 )
+it can be force to 8 bit mode, resulting in a faster console.
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
 .Xr cgeight 4 ,
@@ -75,3 +87,5 @@ interface.
 .Xr vigra 4 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4
+.Xr boot_config 8 ,
+.Xr config 8
