--- a/share/man/man4/man4.sparc64/schizo.4
+++ b/share/man/man4/man4.sparc64/schizo.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: schizo.4,v 1.1 2002/06/08 22:20:04 jason Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -30,7 +30,7 @@
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
 .Dd June 9, 2002
-.Dt PSYCHO 4 sparc64
+.Dt SCHIZO 4 sparc64
 .Os
 .Sh NAME
 .Nm schizo
