--- a/usr.bin/fstat/fstat.1
+++ b/usr.bin/fstat/fstat.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fstat.1,v 1.21 2002/05/18 17:54:15 deraadt Exp $
+.\"	$OpenBSD: fstat.1,v 1.22 2002/05/20 21:19:21 deraadt Exp $
 .\"
 .\" Copyright (c) 1987, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -251,7 +251,7 @@ device is printed with only the kernel address of the device private data.
 Each
 .Xr kqueue 2
 is printed with some information as to queue length.
-Since these things are normally services quickly, it is likely that
+Since these things are normally serviced quickly, it is likely that
 nothing of real importance can be discerned.
 .Sh SYSTRACE
 Each systrace device is printed with only the kernel address of the
