--- a/share/man/man4/man4.mvme68k/Attic/console.4
+++ b/share/man/man4/man4.mvme68k/Attic/console.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: console.4,v 1.4 2000/01/24 05:00:08 smurph Exp $
+.\"	$OpenBSD: console.4,v 1.5 2000/03/02 14:46:47 todd Exp $
 .\" Copyright (c) 1990, 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
