--- a/share/man/man4/man4.sparc/cgfour.4
+++ b/share/man/man4/man4.sparc/cgfour.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfour.4,v 1.10 2002/08/12 10:48:21 miod Exp $
+.\"	$OpenBSD: cgfour.4,v 1.11 2002/08/31 10:47:16 miod Exp $
 .\"	$NetBSD: cgfour.4,v 1.2 1997/10/08 22:00:05 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -59,6 +59,7 @@ console framework.
 .Xr cgthree 4 ,
 .Xr cgtwelve 4 ,
 .Xr cgtwo 4 ,
+.Xr intro 4 ,
 .Xr pnozz 4 ,
 .Xr tcx 4 ,
 .Xr vigra 4 ,
