--- a/share/man/man4/man4.sparc/zs.4
+++ b/share/man/man4/man4.sparc/zs.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: zs.4,v 1.8 2001/10/05 14:45:54 mpech Exp $
+.\"	$OpenBSD: zs.4,v 1.9 2002/08/12 10:48:21 miod Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -65,6 +65,7 @@ connections fail, apparently due to a getty hang.
 The hung getty apparently prevents the cua device from being re-opened.
 .Sh SEE ALSO
 .Xr ioctl 2 ,
+.Xr intro 4 ,
 .Xr tty 4 ,
 .Xr wskbd 4
 .Sh HISTORY
