--- a/share/man/man4/man4.sparc/ie.4
+++ b/share/man/man4/man4.sparc/ie.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ie.4,v 1.5 2001/08/03 15:21:16 mpech Exp $
+.\"     $OpenBSD: ie.4,v 1.6 2001/10/05 14:45:54 mpech Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -43,8 +43,13 @@ network.
 .Sh SEE ALSO
 .Xr arp 4 ,
 .Xr be 4 ,
+.Xr hme 4 ,
+.Xr ifmedia 4 ,
 .Xr ie 4 ,
 .Xr inet 4 ,
 .Xr intro 4 ,
 .Xr le 4 ,
-.Xr qe 4
+.Xr netintro 4 ,
+.Xr qe 4 ,
+.Xr hostname.if 5 ,
+.Xr ifconfig 8
