--- a/share/man/man4/man4.sparc/xd.4
+++ b/share/man/man4/man4.sparc/xd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: xd.4,v 1.4 2001/03/06 19:56:51 brad Exp $
+.\"	$OpenBSD: xd.4,v 1.5 2001/10/05 14:45:54 mpech Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -24,6 +24,7 @@ the VME bus.
 The Xylogics 753 and 7053 are programmed the same way, but are different sizes.
 The 753 is a 6U VME card, while the 7053 is a 9U VME card.
 .Sh SEE ALSO
+.Xr intro 4 ,
 .Xr xy 4
 .Sh HISTORY
 The
