--- a/share/man/man4/man4.sparc/openprom.4
+++ b/share/man/man4/man4.sparc/openprom.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: openprom.4,v 1.1.1.1 1995/10/18 08:44:31 deraadt Exp $
+.\"	$OpenBSD: openprom.4,v 1.2 2000/03/02 14:46:49 todd Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -147,7 +147,8 @@ The given name or value field
 exceeds the maximum allowed length (8191 bytes).
 .El
 .Sh SEE ALSO
-.Xr ioctl 2
+.Xr ioctl 2 ,
+.Xr eeprom 8
 .Sh BUGS
 Due to limitations within the OPENPROM itself,
 these functions run at elevated priority
