--- a/share/man/man4/man4.sparc/magma.4
+++ b/share/man/man4/man4.sparc/magma.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: magma.4,v 1.7 2002/01/25 02:40:21 jason Exp $
+.\"	$OpenBSD: magma.4,v 1.8 2002/02/20 17:18:33 jason Exp $
 .\"
 .\"
 .\" Copyright (c) 1998 Iain Hibbert
@@ -90,12 +90,12 @@ Serial ports
 Parallel ports
 .El
 .Sh SEE ALSO
-.Xr read 2 ,
-.Xr termios 4 ,
+.Xr intro 4 ,
 .Xr sbus 4 ,
 .Xr tty 4
 .Sh AUTHORS
-The driver was written by Iain Hibbert <plunky@skate.demon.co.uk>
+The driver was written by
+.An Iain Hibbert Aq plunky@skate.demon.co.uk
 .Sh HISTORY
 The driver was loosely based upon the
 .Xr cy 4
