--- a/share/man/man4/man4.sparc/xy.4
+++ b/share/man/man4/man4.sparc/xy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: xy.4,v 1.3 1999/07/09 13:35:42 aaron Exp $
+.\"	$OpenBSD: xy.4,v 1.4 2001/03/06 19:56:51 brad Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -20,6 +20,7 @@ The
 is a Xylogics 450/451 SMD disk controller found on sun4 systems with
 the VME bus.
 .Sh SEE ALSO
+.Xr intro 4 ,
 .Xr xd 4
 .Sh HISTORY
 The
