--- a/share/man/man4/man4.sparc64/audiocs.4
+++ b/share/man/man4/man4.sparc64/audiocs.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: audiocs.4,v 1.2 2002/02/19 06:59:13 jason Exp $
+.\"     $OpenBSD: audiocs.4,v 1.3 2002/09/09 20:26:56 jason Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -55,6 +55,8 @@ The output ports are: the internal speaker, line, and headphones.
 .Sh SEE ALSO
 .Xr ioctl 2 ,
 .Xr audio 4 ,
+.Xr audioce 4 ,
+.Xr intro 4 ,
 .Xr sbus 4
 .Sh HISTORY
 .Ox
