--- a/share/man/man4/man4.sparc64/asio.4
+++ b/share/man/man4/man4.sparc64/asio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: asio.4,v 1.1 2002/03/14 01:45:56 jason Exp $
+.\"	$OpenBSD: asio.4,v 1.2 2002/03/14 19:37:07 jason Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -50,6 +50,7 @@ ports with
 glue logic.
 .Sh SEE ALSO
 .Xr com 4 ,
+.Xr intro 4 ,
 .Xr sbus 4
 .Sh AUTHORS
 The driver was written by
