--- a/share/man/man4/man4.sparc64/Attic/vgafb.4
+++ b/share/man/man4/man4.sparc64/Attic/vgafb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vgafb.4,v 1.2 2002/04/04 04:00:53 jason Exp $
+.\"	$OpenBSD: vgafb.4,v 1.3 2002/06/30 21:45:25 deraadt Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -52,5 +52,11 @@ Both unaccelerated access as a dumb framebuffer and
 accelerated access methods are provided to
 .Xr wscons 4 .
 .Sh SEE ALSO
+.Xr bwtwo 4 ,
+.Xr cgsix 4 ,
+.Xr cgthree 4 ,
+.Xr creator 4 ,
+.Xr intro 4 ,
+.Xr pci 4 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4
