--- a/share/man/man4/man4.sparc64/sab.4
+++ b/share/man/man4/man4.sparc64/sab.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sab.4,v 1.2 2001/11/07 19:42:33 jason Exp $
+.\"	$OpenBSD: sab.4,v 1.3 2002/07/09 03:43:00 jason Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -74,6 +74,8 @@ Serial ports
 .El
 .Sh SEE ALSO
 .Xr ioctl 2 ,
+.Xr ebus 4 ,
+.Xr intro 4 ,
 .Xr tty 4
 .Sh HISTORY
 The
