--- a/share/man/man4/man4.sparc64/psycho.4
+++ b/share/man/man4/man4.sparc64/psycho.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: psycho.4,v 1.1 2002/06/08 22:16:24 jason Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -50,7 +50,9 @@ It supports the
 interface in
 .Xr pci 4 .
 .Sh SEE ALSO
-.Xr pci 4
+.Xr intro 4 ,
+.Xr pci 4 ,
+.Xr schizo 4
 .Sh HISTORY
 .Ox
 support for the
