--- a/share/man/man4/man4.sparc64/uperf.4
+++ b/share/man/man4/man4.sparc64/uperf.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: uperf.4,v 1.4 2002/04/04 23:17:56 jason Exp $
+.\"     $OpenBSD: uperf.4,v 1.5 2002/07/23 17:53:36 ian Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -184,6 +184,8 @@ and/or
 .El
 .Sh SEE ALSO
 .Xr ioctl 2 ,
+.Xr ebus 4 ,
+.Xr intro 4 ,
 .Xr sbus 4
 .Sh AUTHORS
 The driver was written by
