--- a/share/man/man4/man4.sparc64/spif.4
+++ b/share/man/man4/man4.sparc64/spif.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: spif.4,v 1.4 2002/02/19 06:59:13 jason Exp $
+.\"     $OpenBSD: spif.4,v 1.5 2002/05/23 09:30:34 mpech Exp $
 .\"
 .\" Copyright (c) 1999-2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -87,9 +87,8 @@ Serial ports
 Parallel ports
 .El
 .Sh SEE ALSO
-.Xr read 2 ,
+.Xr intro 4 ,
 .Xr sbus 4 ,
-.Xr termios 4 ,
 .Xr tty 4
 .Sh AUTHORS
 The driver was written by 
