--- a/bin/ed/ed.1
+++ b/bin/ed/ed.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ed.1,v 1.36 2002/02/17 23:56:04 millert Exp $
+.\"	$OpenBSD: ed.1,v 1.37 2002/08/31 21:44:29 mpech Exp $
 .\"
 .Dd May 2, 1993
 .Dt ED 1
@@ -62,7 +62,7 @@ or
 enters input mode.
 This is the primary means of adding text to a file.
 In this mode, no commands are available;
-instead, the standard input is written directory to the editor buffer.
+instead, the standard input is written directly to the editor buffer.
 Lines consist of text up to and including a newline character.
 Input mode is terminated by entering a single period
 .Pq Ql \&.
