--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.73 2002/08/07 15:49:57 avsm Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.74 2002/08/29 07:34:31 wcobb Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -1099,6 +1099,10 @@ The
 .Sq any
 setting creates an extra flavor choice of 
 .Sq lesstif .
+.It Ev USE_X11
+Set to
+.Sq Yes
+if port requires X11 to work.
 .It Ev VMEM_WARNING
 Set to 
 .Sq Yes 
