--- a/share/man/man4/man4.sparc64/uperf.4
+++ b/share/man/man4/man4.sparc64/uperf.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: uperf.4,v 1.5 2002/07/23 17:53:36 ian Exp $
+.\"     $OpenBSD: uperf.4,v 1.6 2002/10/01 21:03:28 miod Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -137,7 +137,8 @@ The
 and
 .Fa cnt_val1
 contain the values fetched for the counters.
-Software using this interface should be prepared to handle the counters rolling over.
+Software using this interface should be prepared to handle the counters
+rolling over.
 .Pp
 The 
 .Nm
