--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.103 2002/11/06 00:30:04 henning Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.104 2002/11/08 08:08:47 mpech Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -517,6 +517,8 @@ shows per-rule statistics for rules that have labels.
 The following macros can be used in labels:
 .Pp
 .Bl -tag -width $srcaddr -compact -offset indent
+.It Em $if
+the interface.
 .It Em $srcaddr
 the source IP address.
 .It Em $dstaddr
