--- a/bin/kill/kill.1
+++ b/bin/kill/kill.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: kill.1,v 1.19 2002/02/11 18:43:51 mpech Exp $
+.\"	$OpenBSD: kill.1,v 1.20 2002/06/05 06:29:10 jsyn Exp $
 .\"	$NetBSD: kill.1,v 1.8 1995/09/07 06:30:26 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -145,6 +145,7 @@ for details.
 .Cm $ kill -9 1234
 .Pp
 Forcibly terminate process ID 1234.
+.br
 .Pp
 .Cm # kill -HUP `cat /var/run/inetd.pid`
 .Pp
