--- a/bin/date/date.1
+++ b/bin/date/date.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: date.1,v 1.32 2001/12/02 02:02:25 deraadt Exp $
+.\"	$OpenBSD: date.1,v 1.33 2002/02/11 18:43:50 mpech Exp $
 .\"	$NetBSD: date.1,v 1.12 1996/03/12 04:32:37 phil Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -164,12 +164,12 @@ DATE: 1987-11-21
 TIME: 13:36:16
 .Ed
 .Pp
-.Cm date 8506131627
+.Cm # date 8506131627
 .Pp
 Sets the date to
 .Dq Li "June 13, 1985, 4:27 PM" .
 .Pp
-.Cm date 1432
+.Cm # date 1432
 .Pp
 Sets the time to
 .Li "2:32 PM" ,
