--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.106 2002/11/19 10:29:10 pb Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.107 2002/11/19 11:30:17 henning Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -32,7 +32,7 @@
 .Os
 .Sh NAME
 .Nm pf.conf
-.Nd filtering, translation (NAT) and queue (ALTQ) rules file for the
+.Nd filtering, translation (NAT) and queue rules file for the
 packet filter
 .Sh DESCRIPTION
 The
