--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.79 2002/12/30 02:41:33 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.80 2002/12/31 08:33:52 pvalchev Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -821,7 +821,7 @@ if neither PFRAG.shared nor CONFIGURE_SHARED are enough.
 .It Ev ONLY_FOR_ARCHS
 List of architectures on which this port builds.
 Can hold both processor-specific information (e.g., m68k), and more
-specific model information (e.g., amiga).
+specific model information (e.g., hp300).
 .It Ev OPSYS
 Always
 .Ox
