--- a/share/man/man4/man4.sun3/Attic/cgfour.4
+++ b/share/man/man4/man4.sun3/Attic/cgfour.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfour.4,v 1.5 2001/06/23 07:04:21 pjanzen Exp $
+.\"	$OpenBSD: cgfour.4,v 1.6 2002/06/30 21:45:25 deraadt Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
