--- a/share/man/man4/man4.sun3/Attic/le.4
+++ b/share/man/man4/man4.sun3/Attic/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.5 2001/01/29 02:11:12 niklas Exp $
+.\"	$OpenBSD: le.4,v 1.6 2001/11/13 13:54:26 mpech Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
