--- a/share/man/man4/man4.sun3/Attic/intro.4
+++ b/share/man/man4/man4.sun3/Attic/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.2 2002/03/29 22:20:15 deraadt Exp $
+.\"     $OpenBSD: intro.4,v 1.3 2002/03/29 22:46:00 jason Exp $
 .\"
 .\" Copyright (c) 2001 The OpenBSD Project
 .\" ALl Rights Reserved.
