--- a/share/man/man5/fbtab.5
+++ b/share/man/man5/fbtab.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fbtab.5,v 1.8 2000/11/10 20:02:19 todd Exp $
+.\"	$OpenBSD: fbtab.5,v 1.9 2001/08/25 14:54:53 aaron Exp $
 .\"
 .Dd August 22, 1994
 .Dt FBTAB 5
@@ -46,7 +46,7 @@ file is used by
 to
 .Xr chown 2
 the specified files to the user who has performed a login.
-As well,
+Additionally,
 .Xr chmod 2
 is used to set the devices to the specified permission.
 When a user logs out,
