--- a/share/man/man5/genassym.cf.5
+++ b/share/man/man5/genassym.cf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: genassym.cf.5,v 1.1 2001/09/16 14:31:58 miod Exp $
+.\"	$OpenBSD: genassym.cf.5,v 1.2 2001/11/13 13:54:26 mpech Exp $
 .\"	$NetBSD: genassym.cf.5,v 1.8 2001/06/19 12:34:27 wiz Exp $
 .\"
 .\" Copyright (c) 1997 Matthias Pfaller.
@@ -114,11 +114,11 @@ being converted to upper case.
 can be used to customize the output of
 .Xr genassym.sh 8 .
 .br
-When producing C output, values are casted to <ctype> (default: long)
+When producing C output, values are cast to <ctype> (default: long)
 before they get handed to printf. <gcc constraint> (default: n) is the
 constraint used in the __asm__ statements. <asm print modifier> (default:
 empty) can be used to force gcc to output operands in different ways
-then normal.
+than normal.
 The "a" modifier e.g. stops gcc from emitting immediate
 prefixes in front of constants for the i386 and m68k port.
 .Sh FILES
