--- a/usr.sbin/mailwrapper/mailwrapper.8
+++ b/usr.sbin/mailwrapper/mailwrapper.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mailwrapper.8,v 1.4 2000/06/11 21:03:40 millert Exp $
+.\"	$OpenBSD: mailwrapper.8,v 1.6 2002/11/09 02:55:45 fgsch Exp $
 .\"	$NetBSD: mailwrapper.8,v 1.5 1999/03/22 18:44:01 garbled Exp $
 .\"
 .\" Copyright (c) 1998
@@ -82,7 +82,7 @@ functionality, either through a program that also switches behavior
 based on calling name, or through a set of programs that provide
 similar functionality.
 .Pp
-Although having replacement programs that plug replace
+Although having drop-in replacements for
 .Xr sendmail 8
 helps in installing alternative MTAs, it essentially makes the
 configuration of the system depend on hard installing new programs in
