--- a/share/man/man4/man4.sparc64/Attic/hme.4
+++ b/share/man/man4/man4.sparc64/Attic/hme.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: hme.4,v 1.3 2002/02/19 06:59:13 jason Exp $
+.\"     $OpenBSD: hme.4,v 1.4 2002/10/01 21:03:27 miod Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
