--- a/usr.sbin/named/man/Attic/named.restart.8
+++ b/usr.sbin/named/man/Attic/named.restart.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: named.restart.8,v 1.2 1997/03/12 10:42:17 downsj Exp $
+.\"	$OpenBSD: named.restart.8,v 1.3 1999/06/05 22:17:43 aaron Exp $
 .\" ++Copyright++ 1987, 1993
 .\" -
 .\" Copyright (c) 1987, 1993
