--- a/usr.sbin/named/man/Attic/named.8
+++ b/usr.sbin/named/man/Attic/named.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: named.8,v 1.14 2002/09/18 07:33:48 deraadt Exp $
+.\"	$OpenBSD: named.8,v 1.15 2002/12/01 16:56:41 margarida Exp $
 .\" ++Copyright++ 1985
 .\" -
 .\" Copyright (c) 1985
