--- a/usr.sbin/named/man/Attic/getnetent.3
+++ b/usr.sbin/named/man/Attic/getnetent.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getnetent.3,v 1.3 1998/06/15 17:56:16 mickey Exp $
+.\"	$OpenBSD: getnetent.3,v 1.4 1999/06/05 22:17:36 aaron Exp $
 .\" $From: getnetent.3,v 8.2 1996/05/09 05:59:10 vixie Exp $
 .TH getnetent 3
 .SH NAME
