--- a/usr.sbin/named/man/Attic/nslookup.8
+++ b/usr.sbin/named/man/Attic/nslookup.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nslookup.8,v 1.5 1999/06/10 22:38:03 pjanzen Exp $
+.\"	$OpenBSD: nslookup.8,v 1.6 2002/01/12 16:20:29 espie Exp $
 .\"
 .\" ++Copyright++ 1985, 1989
 .\" -
