--- a/usr.sbin/named/man/Attic/gethostbyname.3
+++ b/usr.sbin/named/man/Attic/gethostbyname.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: gethostbyname.3,v 1.2 1997/03/12 10:42:13 downsj Exp $
+.\"	$OpenBSD: gethostbyname.3,v 1.3 1999/06/05 22:17:35 aaron Exp $
 .\" Copyright (c) 1983, 1987 The Regents of the University of California.
 .\" All rights reserved.
 .\"
