--- a/usr.sbin/named/man/Attic/mailaddr.7
+++ b/usr.sbin/named/man/Attic/mailaddr.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: mailaddr.7,v 1.2 1997/03/12 10:42:15 downsj Exp $
 .\" Copyright (c) 1983, 1987 The Regents of the University of California.
 .\" All rights reserved.
 .\"
