--- a/share/man/man4/man4.vax/Attic/crl.4
+++ b/share/man/man4/man4.vax/Attic/crl.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: crl.4,v 1.3 1999/06/05 13:18:37 aaron Exp $
+.\"	$OpenBSD: crl.4,v 1.4 2000/07/22 05:01:13 bjc Exp $
 .\"	$NetBSD: crl.4,v 1.3 1996/03/03 17:13:15 thorpej Exp $
 .\"
 .\" Copyright (c) 1986, 1991 Regents of the University of California.
