--- a/share/man/man4/man4.vax/Attic/dmc.4
+++ b/share/man/man4/man4.vax/Attic/dmc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmc.4,v 1.7 2001/11/13 13:54:26 mpech Exp $
+.\"	$OpenBSD: dmc.4,v 1.8 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: dmc.4,v 1.3 1996/03/03 17:13:22 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
