--- a/share/man/man4/man4.vax/Attic/ct.4
+++ b/share/man/man4/man4.vax/Attic/ct.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ct.4,v 1.2 1996/03/29 10:16:28 niklas Exp $
+.\"	$OpenBSD: ct.4,v 1.3 1999/06/05 13:18:37 aaron Exp $
 .\"	$NetBSD: ct.4,v 1.3 1996/03/03 17:13:17 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
