--- a/share/man/man4/man4.vax/Attic/acc.4
+++ b/share/man/man4/man4.vax/Attic/acc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: acc.4,v 1.5 2001/11/13 13:54:26 mpech Exp $
+.\"	$OpenBSD: acc.4,v 1.6 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: acc.4,v 1.3 1996/03/03 17:13:10 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
