--- a/share/man/man4/man4.vax/Attic/tmscp.4
+++ b/share/man/man4/man4.vax/Attic/tmscp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tmscp.4,v 1.7 2001/10/05 14:45:54 mpech Exp $
+.\"	$OpenBSD: tmscp.4,v 1.8 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: tmscp.4,v 1.4 1996/03/03 17:14:06 thorpej Exp $
 .\"
 .\" Copyright (c) 1986, 1991 Regents of the University of California.
