--- a/share/man/man4/man4.vax/Attic/up.4
+++ b/share/man/man4/man4.vax/Attic/up.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: up.4,v 1.6 2001/06/20 16:49:44 millert Exp $
+.\"	$OpenBSD: up.4,v 1.7 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: up.4,v 1.3 1996/03/03 17:14:12 thorpej Exp $
 .\"
 .\" Copyright (c) 1980,1988, 1991 Regents of the University of California.
