--- a/share/man/man4/man4.vax/Attic/dn.4
+++ b/share/man/man4/man4.vax/Attic/dn.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dn.4,v 1.3 1999/06/05 13:18:38 aaron Exp $
+.\"	$OpenBSD: dn.4,v 1.4 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: dn.4,v 1.3 1996/03/03 17:13:28 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
