--- a/share/man/man4/man4.vax/Attic/ut.4
+++ b/share/man/man4/man4.vax/Attic/ut.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ut.4,v 1.3 1999/06/05 13:18:39 aaron Exp $
+.\"	$OpenBSD: ut.4,v 1.4 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: ut.4,v 1.3 1996/03/03 17:14:13 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
