--- a/share/man/man4/man4.vax/Attic/ht.4
+++ b/share/man/man4/man4.vax/Attic/ht.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ht.4,v 1.6 2001/10/05 14:45:54 mpech Exp $
+.\"	$OpenBSD: ht.4,v 1.7 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: ht.4,v 1.3 1996/03/03 17:13:39 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
