--- a/share/man/man4/man4.vax/Attic/dmv.4
+++ b/share/man/man4/man4.vax/Attic/dmv.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmv.4,v 1.5 1999/09/23 04:12:06 alex Exp $
+.\"	$OpenBSD: dmv.4,v 1.6 2001/11/13 13:54:26 mpech Exp $
 .\"	$NetBSD: dmv.4,v 1.3 1996/03/03 17:13:25 thorpej Exp $
 .\"
 .\" Copyright (c) 1988, 1991 Regents of the University of California.
