--- a/share/man/man4/man4.vax/Attic/tm.4
+++ b/share/man/man4/man4.vax/Attic/tm.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tm.4,v 1.6 2002/04/03 06:21:26 mpech Exp $
+.\"	$OpenBSD: tm.4,v 1.7 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: tm.4,v 1.3 1996/03/03 17:14:04 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
