--- a/share/man/man4/man4.vax/Attic/va.4
+++ b/share/man/man4/man4.vax/Attic/va.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: va.4,v 1.7 2001/11/13 13:54:26 mpech Exp $
+.\"	$OpenBSD: va.4,v 1.8 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: va.4,v 1.3 1996/03/03 17:14:15 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
