--- a/share/man/man4/man4.vax/Attic/hdh.4
+++ b/share/man/man4/man4.vax/Attic/hdh.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hdh.4,v 1.4 2001/10/05 14:45:54 mpech Exp $
+.\"	$OpenBSD: hdh.4,v 1.5 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: hdh.4,v 1.3 1996/03/03 17:13:36 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
