--- a/share/man/man4/man4.vax/Attic/il.4
+++ b/share/man/man4/man4.vax/Attic/il.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: il.4,v 1.4 1999/06/05 13:18:39 aaron Exp $
+.\"	$OpenBSD: il.4,v 1.5 2001/11/13 13:54:26 mpech Exp $
 .\"	$NetBSD: il.4,v 1.3 1996/03/03 17:13:43 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
