--- a/share/man/man4/man4.vax/Attic/dmz.4
+++ b/share/man/man4/man4.vax/Attic/dmz.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmz.4,v 1.4 2001/06/23 07:04:23 pjanzen Exp $
+.\"	$OpenBSD: dmz.4,v 1.5 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: dmz.4,v 1.3 1996/03/03 17:13:26 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
